--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase-admin": "^11.6.0"
   }
 }
